sub function built

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -9,8 +9,9 @@ block content
     p The following files are active:
     br
 
-    - let files = fileInfo.slice(0, 7);
-    - let lastUpload = fileInfo[fileInfo.length - 1];
+    - let files = fileInfo
+    - let lastUpload = fileInfo2[fileInfo2.length - 1];
+    
 
     //- - let lastReplace = parseInt(returns[returns.length - 1].Key.substr(1,12));
     //- - let nowCutString = Date.now().toString().substr(1,12);
