page locks built

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -22,7 +22,7 @@ block content
     
     
 
-    if false
+    if global.uploadLock == false
       h1 No guy
     else                    
       div
