--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -1,81 +1,81 @@
 extends layout
-
 block content
+  body
   
 
-  if error
-    p Error getting dynamic content.
-  else
-    p The following files are active:
-    br
+    if error
+      p Error getting dynamic content.
+    else
+      p The following files are active:
+      br
 
-    - let files = fileInfo.slice(0,7);
-    - let lastUpload = fileInfo2[fileInfo2.length - 1];
-    
+      - let files = fileInfo.slice(0,7);
+      - let lastUpload = fileInfo2[fileInfo2.length - 1];
+      
 
-    //- - let lastReplace = parseInt(returns[returns.length - 1].Key.substr(1,12));
-    //- - let nowCutString = Date.now().toString().substr(1,12);
-    //- - let nowCut = parseInt(nowCutString) - 25200000;
-    //- - let dontRenderIt = lastReplace > nowCut;      
-    //- - console.log('Nowcut: ' + nowCut);
-    //- - console.log('dontrenderit ' + dontRenderIt); 
-    
-    
+      //- - let lastReplace = parseInt(returns[returns.length - 1].Key.substr(1,12));
+      //- - let nowCutString = Date.now().toString().substr(1,12);
+      //- - let nowCut = parseInt(nowCutString) - 25200000;
+      //- - let dontRenderIt = lastReplace > nowCut;      
+      //- - console.log('Nowcut: ' + nowCut);
+      //- - console.log('dontrenderit ' + dontRenderIt); 
+      
+      
 
-    if global.uploadLock == false
-      h1 No guy
-    else                    
-      div
-        - let x = 0;   
-        each file in files ? files : ['NO!!!']       
-          - x++        
-          - let audioSrc = `https://fk-audio.s3.amazonaws.com/${file.Name}`                            
-          div(class="solid")
-            form(method="POST" action=`/replace/${file.Name}?_method=PUT` id=`launchForm${x}` encType="multipart/form-data")                                
-              p= file.Name
+      if global.uploadLock == false && isAuthenticated
+        h1 No guy
+      else                    
+        div
+          - let x = 0;   
+          each file in files ? files : ['NO!!!']       
+            - x++        
+            - let audioSrc = `https://fk-audio.s3.amazonaws.com/${file.Name}`                            
+            div(class="solid")
+              form(method="POST" action=`/replace/${file.Name}?_method=PUT` id=`launchForm${x}` encType="multipart/form-data")                                
+                p= file.Name
+                
+                ol(class="listy" id=file.Name)  
+                  div(id="player")          
+                    audio(id=`${x}` loop controls type="audio/mpeg" src=audioSrc class="audioElement")
+                    br
+                    a(href="#" onclick=`document.getElementById(${x}).muted = true;`) MUTE -- 
+                    a(href="#" onclick=`document.getElementById(${x}).muted = false;`) -- UNMUTE
+              br                                
+              input(type="submit" form=`launchForm${x}` value="REPLACE")
+              br
+              br      
               
-              ol(class="listy" id=file.Name)  
-                div(id="player")          
-                  audio(id=`${x}` loop controls type="audio/mpeg" src=audioSrc class="audioElement")
-                  br
-                  a(href="#" onclick=`document.getElementById(${x}).muted = true;`) MUTE -- 
-                  a(href="#" onclick=`document.getElementById(${x}).muted = false;`) -- UNMUTE
-            br                                
-            input(type="submit" form=`launchForm${x}` value="REPLACE")
-            br
-            br      
-             
-      - let uploadSrc = `https://fk-audio.s3.amazonaws.com/${lastUpload.Name}`
-      br
-      br
-      br
-      
-      div(class="dotted")
-        p LAST FILE YOU UPLOADED:
-        p= lastUpload.Name
-        audio(controls loop type="audio/mpeg" src=uploadSrc id="toDelete")       
-        br      
-        form(method="POST" action=`/delete/${lastUpload}` id="deleteForm" encType="multipart/form-data")                                        
-        input(type="submit" form="deleteForm" value="UNDO" onclick="setTimeout(function(){var ww = window.open('/uploadForm', '_blank'); ww.close(); }, 1000);")      
-  
+        - let uploadSrc = `https://fk-audio.s3.amazonaws.com/${lastUpload.Name}`
+        br
+        br
+        br
+        
+        div(class="dotted")
+          p LAST FILE YOU UPLOADED:
+          p= lastUpload.Name
+          audio(controls loop type="audio/mpeg" src=uploadSrc id="toDelete")       
+          br      
+          form(method="POST" action=`/delete/${lastUpload}` id="deleteForm" encType="multipart/form-data")                                        
+          input(type="submit" form="deleteForm" value="UNDO" onclick="setTimeout(function(){var ww = window.open('/uploadForm', '_blank'); ww.close(); }, 1000);")      
+    
 
-    //- script.
-    //-   let x = document.getElementById('toDelete');
-    //-   let srcString = x.src;
-    //-   let snapshot = srcString.substring(48, 54); // => ".mp3"
-    //-   console.log(snapshot);
-      
-              
-    //-   function checkChecks(){
-    //-   // Query for only the checked checkboxes and put the result in an array
-    //-   let checked = Array.prototype.slice.call(document.querySelectorAll("input[type='checkbox']:checked"));      
-    //-   // Loop over the array and inspect contents
-    //-   checked.forEach(function(cb){
-    //-     persistData = cb.parentNode.id;        
-    //-     });
-    //-   console.log(persistData);
-    //-   };
-      
-      
-          
-      
+      //- script.
+      //-   let x = document.getElementById('toDelete');
+      //-   let srcString = x.src;
+      //-   let snapshot = srcString.substring(48, 54); // => ".mp3"
+      //-   console.log(snapshot);
+        
+                
+      //-   function checkChecks(){
+      //-   // Query for only the checked checkboxes and put the result in an array
+      //-   let checked = Array.prototype.slice.call(document.querySelectorAll("input[type='checkbox']:checked"));      
+      //-   // Loop over the array and inspect contents
+      //-   checked.forEach(function(cb){
+      //-     persistData = cb.parentNode.id;        
+      //-     });
+      //-   console.log(persistData);
+      //-   };
+        
+        
+            
+        
