--- a/views/upload-form.pug
+++ b/views/upload-form.pug
@@ -5,7 +5,7 @@ block content
   if error
     p Error getting dynamic content.
   else
-    if global.uploadLock == false
+    if global.uploadLock == false && isAuthenticated
       div(class="solid")
         p UPLOAD YOUR FILE:
         form(method="POST" action="/upload" id="uploadForm" encType="multipart/form-data")                 
