intern form somewhat built

--- a/views/index.pug
+++ b/views/index.pug
@@ -50,7 +50,7 @@ block content
         p
           | Short bio goes here. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         p
-          a(href='#') See all our past curators &raquo;
+          a(href='/pastComposers') See all our past curators &raquo;
     //- content
     section.mainContent
       //- Contact details
@@ -59,6 +59,7 @@ block content
         hr.sectionTitleRule
         hr.sectionTitleRule2
         .section1Content
+          
           h2.sectionContentTitle Our FlameKeepers
           p.sectionContent
             | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.  Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Nam liber tempor cum soluta nobis eleifend option congue ihil imperdiet doming id quod mazim placerat facer possim assum.
@@ -68,6 +69,7 @@ block content
           h2.sectionContentTitle Ghosts from the Past
           p.sectionContent
             | Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+      
       //- Previous experience details
       section.section2
         h2.sectionTitle Meet the  TEAM
