--- a/views/pastComposers.pug
+++ b/views/pastComposers.pug
@@ -1,9 +1,48 @@
 extends layout
-
 block content
-  - let files = fileInfo.Name;  
-  each file in files ? files : ['NO!!!']
-    - console.log(file);
-    - let photoSrc = `https://fk-composer-info.s3.amazonaws.com/${file}`           
-    p= file     
-      img(src=`${photoSrc}` alt='sample logo')
+  body(class='css-selector')
+    header
+      .profileLogo
+        //-- Profile logo. Add a img tag in place of <span>.
+        p.logoPlaceholder
+          img(src='./images/me-logo-wht.png' alt='sample logo')      
+      .installation
+        
+        
+        
+        //- div(class="waveform")
+        //- button(class="btn" onclick="startAudio()") Play
+
+        //- each file in files ? files : ['NO!!!']
+        //-   - console.log(file.Key);
+          //- - let audioSrc = `https://fk-audio.s3.amazonaws.com/${file.Key}`           
+          //- p= file.Key
+          //- p= file.LastModified
+          //-   audio(controls="", type="audio/mpeg" src=audioSrc)            
+        section.profileHeader
+          h1 The FlameKeeper
+          h3 A LIVE STREAMING ART INSTALLATION&nbsp;
+          p
+            | Introductory text about the project goes here. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.
+          br
+        hr
+        br
+        br
+        br
+        - let files = fileInfo;          
+        each file in files ? files : ['NO!!!']
+          - let photoSrc = `https://fk-composer-info.s3.amazonaws.com/${file.Name}`                           
+          .profilePhoto
+            //- Profile photo
+            img(src=`${photoSrc}` alt='sample logo')
+          //- Identity details
+          section.profileHeader
+            h3 
+            h1 #{file.Composer}
+            p
+              | #{file.Bio}
+            p              
+    
+
+    
+      
